// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchOverviewTab should navigate to ACLs tab correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-row Grid__GridRow-sc-5irhjd-2"
    style="margin: -10px -10px -10px -10px;"
  >
    <div
      class="ant-col ant-col-24 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 148px;"
      >
        <div
          class="styledComponents__Wrapper-sc-1352uh8-0 ilNUvb"
        >
          <div
            class="styledComponents__FallbackWrapper-sc-1352uh8-1 doEIjj"
          >
            <span
              aria-label="loader"
              role="img"
            >
              <div
                aria-busy="true"
                aria-live="polite"
                class="ant-spin ant-spin-lg ant-spin-spinning"
              >
                <span
                  class="ant-spin-dot ant-spin-dot-spin"
                >
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                </span>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card styledComponents__Tabs-sc-1afcsfc-0 jHmORd"
    style="margin-top: 25px;"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform: translate(0px, 0px);"
        >
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-panel"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-panel"
              role="tab"
              tabindex="0"
            >
              Panel
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-ports"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-ports"
              role="tab"
              tabindex="0"
            >
              Ports
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-routeInterfaces"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-routeInterfaces"
              role="tab"
              tabindex="0"
            >
              Route Interfaces
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-vlans"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-vlans"
              role="tab"
              tabindex="0"
            >
              VLANs
            </div>
          </div>
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
          >
            <div
              aria-controls="rc-tabs-test-panel-acls"
              aria-selected="true"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-acls"
              role="tab"
              tabindex="0"
            >
              ACLs
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="rc-tabs-test-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="rc-tabs-test-more"
          style="visibility: hidden; order: 1;"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-panel"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-panel"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-ports"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-ports"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-routeInterfaces"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-routeInterfaces"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-vlans"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-vlans"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-acls"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          id="rc-tabs-test-panel-acls"
          role="tabpanel"
          tabindex="0"
        >
          SwitchOverviewACLs
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchOverviewTab should navigate to Route Interfaces tab correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-row Grid__GridRow-sc-5irhjd-2"
    style="margin: -10px -10px -10px -10px;"
  >
    <div
      class="ant-col ant-col-24 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 148px;"
      >
        <div
          class="styledComponents__Wrapper-sc-1352uh8-0 ilNUvb"
        >
          <div
            class="styledComponents__FallbackWrapper-sc-1352uh8-1 doEIjj"
          >
            <span
              aria-label="loader"
              role="img"
            >
              <div
                aria-busy="true"
                aria-live="polite"
                class="ant-spin ant-spin-lg ant-spin-spinning"
              >
                <span
                  class="ant-spin-dot ant-spin-dot-spin"
                >
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                </span>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card styledComponents__Tabs-sc-1afcsfc-0 jHmORd"
    style="margin-top: 25px;"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform: translate(0px, 0px);"
        >
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-panel"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-panel"
              role="tab"
              tabindex="0"
            >
              Panel
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-ports"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-ports"
              role="tab"
              tabindex="0"
            >
              Ports
            </div>
          </div>
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
          >
            <div
              aria-controls="rc-tabs-test-panel-routeInterfaces"
              aria-selected="true"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-routeInterfaces"
              role="tab"
              tabindex="0"
            >
              Route Interfaces
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-vlans"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-vlans"
              role="tab"
              tabindex="0"
            >
              VLANs
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-acls"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-acls"
              role="tab"
              tabindex="0"
            >
              ACLs
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="rc-tabs-test-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="rc-tabs-test-more"
          style="visibility: hidden; order: 1;"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-panel"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-panel"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-ports"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-ports"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-routeInterfaces"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          id="rc-tabs-test-panel-routeInterfaces"
          role="tabpanel"
          tabindex="0"
        >
          SwitchOverviewRouteInterfaces
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-vlans"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-vlans"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-acls"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-acls"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchOverviewTab should navigate to VLANs tab correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-row Grid__GridRow-sc-5irhjd-2"
    style="margin: -10px -10px -10px -10px;"
  >
    <div
      class="ant-col ant-col-24 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 148px;"
      >
        <div
          class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
        >
          <div
            data-testid="rc-SwitchInfoWidget"
            title="SwitchInfoWidget"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card styledComponents__Tabs-sc-1afcsfc-0 jHmORd"
    style="margin-top: 25px;"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform: translate(0px, 0px);"
        >
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-panel"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-panel"
              role="tab"
              tabindex="0"
            >
              Panel
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-ports"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-ports"
              role="tab"
              tabindex="0"
            >
              Ports
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-routeInterfaces"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-routeInterfaces"
              role="tab"
              tabindex="0"
            >
              Route Interfaces
            </div>
          </div>
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
          >
            <div
              aria-controls="rc-tabs-test-panel-vlans"
              aria-selected="true"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-vlans"
              role="tab"
              tabindex="0"
            >
              VLANs
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-acls"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-acls"
              role="tab"
              tabindex="0"
            >
              ACLs
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            style="left: 0px; width: 1280px;"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="rc-tabs-test-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="rc-tabs-test-more"
          style="visibility: hidden; order: 1;"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-panel"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-panel"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-ports"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-ports"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-routeInterfaces"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-routeInterfaces"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-vlans"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          id="rc-tabs-test-panel-vlans"
          role="tabpanel"
          tabindex="0"
        >
          <div
            class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
          >
            <div
              class="styledComponents__Wrapper-sc-1abm7iv-13 crtNbp"
            >
              <div
                class="ant-pro-table"
              >
                <div
                  class="ant-pro-card"
                >
                  <div
                    class="ant-pro-card-body"
                    style="padding-top: 0px;"
                  >
                    <div
                      class="ant-pro-table-list-toolbar"
                    >
                      <div
                        class="ant-pro-table-list-toolbar-container"
                      >
                        <div
                          class="ant-pro-table-list-toolbar-left"
                        />
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
                        >
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-setting-items"
                            >
                              <div
                                class="ant-space-item"
                              >
                                <div
                                  class="ant-pro-table-list-toolbar-setting-item"
                                >
                                  <svg
                                    data-testid="SettingsOutlined"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-table-wrapper"
                    >
                      <div
                        class="ant-spin-nested-loading"
                      >
                        <div
                          class="ant-spin-container"
                        >
                          <div
                            class="ant-table ant-table-middle ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                          >
                            <div
                              class="ant-table-container"
                            >
                              <div
                                class="ant-table-content"
                                style="overflow-x: auto; overflow-y: hidden;"
                              >
                                <table
                                  style="min-width: 100%; table-layout: auto;"
                                >
                                  <colgroup>
                                    <col />
                                    <col />
                                    <col />
                                    <col />
                                    <col />
                                    <col />
                                    <col />
                                    <col />
                                    <col />
                                    <col
                                      style="width: 32px;"
                                    />
                                  </colgroup>
                                  <thead
                                    class="ant-table-thead"
                                  >
                                    <tr>
                                      <th
                                        class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                        tabindex="0"
                                      >
                                        <div
                                          class="styledComponents__ResizableHover-sc-1abm7iv-9"
                                        />
                                        <div
                                          class="ant-table-column-sorters"
                                        >
                                          <span
                                            class="ant-table-column-title"
                                          >
                                            VLAN #
                                          </span>
                                          <span
                                            class="ant-table-column-sorter ant-table-column-sorter-full"
                                          >
                                            <span
                                              class="ant-table-column-sorter-inner"
                                            >
                                              <span
                                                aria-label="caret-up"
                                                class="anticon anticon-caret-up ant-table-column-sorter-up"
                                                role="img"
                                              >
                                                <svg
                                                  aria-hidden="true"
                                                  data-icon="caret-up"
                                                  fill="currentColor"
                                                  focusable="false"
                                                  height="1em"
                                                  viewBox="0 0 1024 1024"
                                                  width="1em"
                                                >
                                                  <path
                                                    d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                                  />
                                                </svg>
                                              </span>
                                              <span
                                                aria-label="caret-down"
                                                class="anticon anticon-caret-down ant-table-column-sorter-down"
                                                role="img"
                                              >
                                                <svg
                                                  aria-hidden="true"
                                                  data-icon="caret-down"
                                                  fill="currentColor"
                                                  focusable="false"
                                                  height="1em"
                                                  viewBox="0 0 1024 1024"
                                                  width="1em"
                                                >
                                                  <path
                                                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                                  />
                                                </svg>
                                              </span>
                                            </span>
                                          </span>
                                        </div>
                                        <div
                                          class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                                        />
                                      </th>
                                      <th
                                        class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                        tabindex="0"
                                      >
                                        <div
                                          class="styledComponents__ResizableHover-sc-1abm7iv-9"
                                        />
                                        <div
                                          class="ant-table-column-sorters"
                                        >
                                          <span
                                            class="ant-table-column-title"
                                          >
                                            VLAN Name
                                          </span>
                                          <span
                                            class="ant-table-column-sorter ant-table-column-sorter-full"
                                          >
                                            <span
                                              class="ant-table-column-sorter-inner"
                                            >
                                              <span
                                                aria-label="caret-up"
                                                class="anticon anticon-caret-up ant-table-column-sorter-up"
                                                role="img"
                                              >
                                                <svg
                                                  aria-hidden="true"
                                                  data-icon="caret-up"
                                                  fill="currentColor"
                                                  focusable="false"
                                                  height="1em"
                                                  viewBox="0 0 1024 1024"
                                                  width="1em"
                                                >
                                                  <path
                                                    d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                                  />
                                                </svg>
                                              </span>
                                              <span
                                                aria-label="caret-down"
                                                class="anticon anticon-caret-down ant-table-column-sorter-down"
                                                role="img"
                                              >
                                                <svg
                                                  aria-hidden="true"
                                                  data-icon="caret-down"
                                                  fill="currentColor"
                                                  focusable="false"
                                                  height="1em"
                                                  viewBox="0 0 1024 1024"
                                                  width="1em"
                                                >
                                                  <path
                                                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                                  />
                                                </svg>
                                              </span>
                                            </span>
                                          </span>
                                        </div>
                                        <div
                                          class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                                        />
                                      </th>
                                      <th
                                        class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                        tabindex="0"
                                      >
                                        <div
                                          class="styledComponents__ResizableHover-sc-1abm7iv-9"
                                        />
                                        <div
                                          class="ant-table-column-sorters"
                                        >
                                          <span
                                            class="ant-table-column-title"
                                          >
                                            IPv4 DHCP Snooping
                                          </span>
                                          <span
                                            class="ant-table-column-sorter ant-table-column-sorter-full"
                                          >
                                            <span
                                              class="ant-table-column-sorter-inner"
                                            >
                                              <span
                                                aria-label="caret-up"
                                                class="anticon anticon-caret-up ant-table-column-sorter-up"
                                                role="img"
                                              >
                                                <svg
                                                  aria-hidden="true"
                                                  data-icon="caret-up"
                                                  fill="currentColor"
                                                  focusable="false"
                                                  height="1em"
                                                  viewBox="0 0 1024 1024"
                                                  width="1em"
                                                >
                                                  <path
                                                    d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                                  />
                                                </svg>
                                              </span>
                                              <span
                                                aria-label="caret-down"
                                                class="anticon anticon-caret-down ant-table-column-sorter-down"
                                                role="img"
                                              >
                                                <svg
                                                  aria-hidden="true"
                                                  data-icon="caret-down"
                                                  fill="currentColor"
                                                  focusable="false"
                                                  height="1em"
                                                  viewBox="0 0 1024 1024"
                                                  width="1em"
                                                >
                                                  <path
                                                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                                  />
                                                </svg>
                                              </span>
                                            </span>
                                          </span>
                                        </div>
                                        <div
                                          class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                                        />
                                      </th>
                                      <th
                                        class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                        tabindex="0"
                                      >
                                        <div
                                          class="styledComponents__ResizableHover-sc-1abm7iv-9"
                                        />
                                        <div
                                          class="ant-table-column-sorters"
                                        >
                                          <span
                                            class="ant-table-column-title"
                                          >
                                            ARP Inspection
                                          </span>
                                          <span
                                            class="ant-table-column-sorter ant-table-column-sorter-full"
                                          >
                                            <span
                                              class="ant-table-column-sorter-inner"
                                            >
                                              <span
                                                aria-label="caret-up"
                                                class="anticon anticon-caret-up ant-table-column-sorter-up"
                                                role="img"
                                              >
                                                <svg
                                                  aria-hidden="true"
                                                  data-icon="caret-up"
                                                  fill="currentColor"
                                                  focusable="false"
                                                  height="1em"
                                                  viewBox="0 0 1024 1024"
                                                  width="1em"
                                                >
                                                  <path
                                                    d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                                  />
                                                </svg>
                                              </span>
                                              <span
                                                aria-label="caret-down"
                                                class="anticon anticon-caret-down ant-table-column-sorter-down"
                                                role="img"
                                              >
                                                <svg
                                                  aria-hidden="true"
                                                  data-icon="caret-down"
                                                  fill="currentColor"
                                                  focusable="false"
                                                  height="1em"
                                                  viewBox="0 0 1024 1024"
                                                  width="1em"
                                                >
                                                  <path
                                                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                                  />
                                                </svg>
                                              </span>
                                            </span>
                                          </span>
                                        </div>
                                        <div
                                          class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                                        />
                                      </th>
                                      <th
                                        class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                        tabindex="0"
                                      >
                                        <div
                                          class="styledComponents__ResizableHover-sc-1abm7iv-9"
                                        />
                                        <div
                                          class="ant-table-column-sorters"
                                        >
                                          <span
                                            class="ant-table-column-title"
                                          >
                                            IGMP Snooping
                                          </span>
                                          <span
                                            class="ant-table-column-sorter ant-table-column-sorter-full"
                                          >
                                            <span
                                              class="ant-table-column-sorter-inner"
                                            >
                                              <span
                                                aria-label="caret-up"
                                                class="anticon anticon-caret-up ant-table-column-sorter-up"
                                                role="img"
                                              >
                                                <svg
                                                  aria-hidden="true"
                                                  data-icon="caret-up"
                                                  fill="currentColor"
                                                  focusable="false"
                                                  height="1em"
                                                  viewBox="0 0 1024 1024"
                                                  width="1em"
                                                >
                                                  <path
                                                    d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                                  />
                                                </svg>
                                              </span>
                                              <span
                                                aria-label="caret-down"
                                                class="anticon anticon-caret-down ant-table-column-sorter-down"
                                                role="img"
                                              >
                                                <svg
                                                  aria-hidden="true"
                                                  data-icon="caret-down"
                                                  fill="currentColor"
                                                  focusable="false"
                                                  height="1em"
                                                  viewBox="0 0 1024 1024"
                                                  width="1em"
                                                >
                                                  <path
                                                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                                  />
                                                </svg>
                                              </span>
                                            </span>
                                          </span>
                                        </div>
                                        <div
                                          class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                                        />
                                      </th>
                                      <th
                                        class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                        tabindex="0"
                                      >
                                        <div
                                          class="styledComponents__ResizableHover-sc-1abm7iv-9"
                                        />
                                        <div
                                          class="ant-table-column-sorters"
                                        >
                                          <span
                                            class="ant-table-column-title"
                                          >
                                            Multicast Version
                                          </span>
                                          <span
                                            class="ant-table-column-sorter ant-table-column-sorter-full"
                                          >
                                            <span
                                              class="ant-table-column-sorter-inner"
                                            >
                                              <span
                                                aria-label="caret-up"
                                                class="anticon anticon-caret-up ant-table-column-sorter-up"
                                                role="img"
                                              >
                                                <svg
                                                  aria-hidden="true"
                                                  data-icon="caret-up"
                                                  fill="currentColor"
                                                  focusable="false"
                                                  height="1em"
                                                  viewBox="0 0 1024 1024"
                                                  width="1em"
                                                >
                                                  <path
                                                    d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                                  />
                                                </svg>
                                              </span>
                                              <span
                                                aria-label="caret-down"
                                                class="anticon anticon-caret-down ant-table-column-sorter-down"
                                                role="img"
                                              >
                                                <svg
                                                  aria-hidden="true"
                                                  data-icon="caret-down"
                                                  fill="currentColor"
                                                  focusable="false"
                                                  height="1em"
                                                  viewBox="0 0 1024 1024"
                                                  width="1em"
                                                >
                                                  <path
                                                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                                  />
                                                </svg>
                                              </span>
                                            </span>
                                          </span>
                                        </div>
                                        <div
                                          class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                                        />
                                      </th>
                                      <th
                                        class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                        tabindex="0"
                                      >
                                        <div
                                          class="styledComponents__ResizableHover-sc-1abm7iv-9"
                                        />
                                        <div
                                          class="ant-table-column-sorters"
                                        >
                                          <span
                                            class="ant-table-column-title"
                                          >
                                            Spanning Tree
                                          </span>
                                          <span
                                            class="ant-table-column-sorter ant-table-column-sorter-full"
                                          >
                                            <span
                                              class="ant-table-column-sorter-inner"
                                            >
                                              <span
                                                aria-label="caret-up"
                                                class="anticon anticon-caret-up ant-table-column-sorter-up"
                                                role="img"
                                              >
                                                <svg
                                                  aria-hidden="true"
                                                  data-icon="caret-up"
                                                  fill="currentColor"
                                                  focusable="false"
                                                  height="1em"
                                                  viewBox="0 0 1024 1024"
                                                  width="1em"
                                                >
                                                  <path
                                                    d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                                  />
                                                </svg>
                                              </span>
                                              <span
                                                aria-label="caret-down"
                                                class="anticon anticon-caret-down ant-table-column-sorter-down"
                                                role="img"
                                              >
                                                <svg
                                                  aria-hidden="true"
                                                  data-icon="caret-down"
                                                  fill="currentColor"
                                                  focusable="false"
                                                  height="1em"
                                                  viewBox="0 0 1024 1024"
                                                  width="1em"
                                                >
                                                  <path
                                                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                                  />
                                                </svg>
                                              </span>
                                            </span>
                                          </span>
                                        </div>
                                        <div
                                          class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                                        />
                                      </th>
                                      <th
                                        class="ant-table-cell react-resizable"
                                      >
                                        <div
                                          class="styledComponents__ResizableHover-sc-1abm7iv-9"
                                        />
                                        Untagged Ports
                                        <div
                                          class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                                        />
                                      </th>
                                      <th
                                        class="ant-table-cell react-resizable"
                                      >
                                        <div
                                          class="styledComponents__ResizableHover-sc-1abm7iv-9"
                                        />
                                        Tagged Ports
                                        <div
                                          class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                                        />
                                      </th>
                                      <th
                                        class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first react-resizable"
                                        style="position: sticky; right: 0px;"
                                      >
                                        <div
                                          class="styledComponents__ResizableHover-sc-1abm7iv-9"
                                        />
                                        <div
                                          class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                                        />
                                      </th>
                                    </tr>
                                  </thead>
                                  <tbody
                                    class="ant-table-tbody"
                                  >
                                    <tr
                                      aria-hidden="true"
                                      class="ant-table-measure-row"
                                      style="height: 0px; font-size: 0px;"
                                    >
                                      <td
                                        style="padding: 0px; border: 0px; height: 0px;"
                                      >
                                        <div
                                          style="height: 0px; overflow: hidden;"
                                        >
                                           
                                        </div>
                                      </td>
                                      <td
                                        style="padding: 0px; border: 0px; height: 0px;"
                                      >
                                        <div
                                          style="height: 0px; overflow: hidden;"
                                        >
                                           
                                        </div>
                                      </td>
                                      <td
                                        style="padding: 0px; border: 0px; height: 0px;"
                                      >
                                        <div
                                          style="height: 0px; overflow: hidden;"
                                        >
                                           
                                        </div>
                                      </td>
                                      <td
                                        style="padding: 0px; border: 0px; height: 0px;"
                                      >
                                        <div
                                          style="height: 0px; overflow: hidden;"
                                        >
                                           
                                        </div>
                                      </td>
                                      <td
                                        style="padding: 0px; border: 0px; height: 0px;"
                                      >
                                        <div
                                          style="height: 0px; overflow: hidden;"
                                        >
                                           
                                        </div>
                                      </td>
                                      <td
                                        style="padding: 0px; border: 0px; height: 0px;"
                                      >
                                        <div
                                          style="height: 0px; overflow: hidden;"
                                        >
                                           
                                        </div>
                                      </td>
                                      <td
                                        style="padding: 0px; border: 0px; height: 0px;"
                                      >
                                        <div
                                          style="height: 0px; overflow: hidden;"
                                        >
                                           
                                        </div>
                                      </td>
                                      <td
                                        style="padding: 0px; border: 0px; height: 0px;"
                                      >
                                        <div
                                          style="height: 0px; overflow: hidden;"
                                        >
                                           
                                        </div>
                                      </td>
                                      <td
                                        style="padding: 0px; border: 0px; height: 0px;"
                                      >
                                        <div
                                          style="height: 0px; overflow: hidden;"
                                        >
                                           
                                        </div>
                                      </td>
                                      <td
                                        style="padding: 0px; border: 0px; height: 0px;"
                                      >
                                        <div
                                          style="height: 0px; overflow: hidden;"
                                        >
                                           
                                        </div>
                                      </td>
                                    </tr>
                                    <tr
                                      class="ant-table-row ant-table-row-level-0"
                                      data-row-key="666"
                                    >
                                      <td
                                        class="ant-table-cell"
                                      >
                                        <button
                                          class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 eAazoW"
                                          type="button"
                                        >
                                          666
                                        </button>
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        vlan name
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        ON
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        ON
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        Passive
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        3
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        STP
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        <div
                                          style="width: 200px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"
                                        />
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      />
                                      <td
                                        class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                        style="position: sticky; right: 0px;"
                                      />
                                    </tr>
                                    <tr
                                      class="ant-table-row ant-table-row-level-0"
                                      data-row-key="555"
                                    >
                                      <td
                                        class="ant-table-cell"
                                      >
                                        <button
                                          class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 eAazoW"
                                          type="button"
                                        >
                                          555
                                        </button>
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      />
                                      <td
                                        class="ant-table-cell"
                                      >
                                        OFF
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        OFF
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        None
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      />
                                      <td
                                        class="ant-table-cell"
                                      >
                                        None
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        <div
                                          style="width: 200px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"
                                        />
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      />
                                      <td
                                        class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                        style="position: sticky; right: 0px;"
                                      />
                                    </tr>
                                    <tr
                                      class="ant-table-row ant-table-row-level-0"
                                      data-row-key="444"
                                    >
                                      <td
                                        class="ant-table-cell"
                                      >
                                        <button
                                          class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 eAazoW"
                                          type="button"
                                        >
                                          444
                                        </button>
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      />
                                      <td
                                        class="ant-table-cell"
                                      >
                                        OFF
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        OFF
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        None
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      />
                                      <td
                                        class="ant-table-cell"
                                      >
                                        None
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        <div
                                          style="width: 200px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"
                                        />
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      />
                                      <td
                                        class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                        style="position: sticky; right: 0px;"
                                      />
                                    </tr>
                                    <tr
                                      class="ant-table-row ant-table-row-level-0"
                                      data-row-key="333"
                                    >
                                      <td
                                        class="ant-table-cell"
                                      >
                                        <button
                                          class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 eAazoW"
                                          type="button"
                                        >
                                          333
                                        </button>
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      />
                                      <td
                                        class="ant-table-cell"
                                      >
                                        OFF
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        OFF
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        None
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      />
                                      <td
                                        class="ant-table-cell"
                                      >
                                        None
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        <div
                                          style="width: 200px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"
                                        />
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      />
                                      <td
                                        class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                        style="position: sticky; right: 0px;"
                                      />
                                    </tr>
                                    <tr
                                      class="ant-table-row ant-table-row-level-0"
                                      data-row-key="222"
                                    >
                                      <td
                                        class="ant-table-cell"
                                      >
                                        <button
                                          class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 eAazoW"
                                          type="button"
                                        >
                                          222
                                        </button>
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      />
                                      <td
                                        class="ant-table-cell"
                                      >
                                        OFF
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        OFF
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        None
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      />
                                      <td
                                        class="ant-table-cell"
                                      />
                                      <td
                                        class="ant-table-cell"
                                      >
                                        <div
                                          style="width: 200px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"
                                        />
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        1/1/3
                                      </td>
                                      <td
                                        class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                        style="position: sticky; right: 0px;"
                                      />
                                    </tr>
                                    <tr
                                      class="ant-table-row ant-table-row-level-0"
                                      data-row-key="111"
                                    >
                                      <td
                                        class="ant-table-cell"
                                      >
                                        <button
                                          class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 eAazoW"
                                          type="button"
                                        >
                                          111
                                        </button>
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        DEFAULT-VLAN
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        OFF
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        OFF
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        None
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      />
                                      <td
                                        class="ant-table-cell"
                                      >
                                        STP
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      >
                                        <div
                                          style="width: 200px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"
                                        >
                                          1/1/1,1/1/2,1/1/3,1/1/4,1/1/5,1/1/6,1/1/7,1/1/8,1/1/9,1/1/10,1/1/11,1/1/12,1/2/1,1/2/2,2/1/1,2/1/2,2/1/3,2/1/4,2/1/5,2/1/6,2/1/7,2/1/8,2/1/9,2/1/10,2/1/11,2/1/12,2/2/1,2/2/2,2/3/2
                                        </div>
                                      </td>
                                      <td
                                        class="ant-table-cell"
                                      />
                                      <td
                                        class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                        style="position: sticky; right: 0px;"
                                      />
                                    </tr>
                                  </tbody>
                                </table>
                              </div>
                            </div>
                          </div>
                          <ul
                            class="ant-pagination ant-pagination-mini ant-table-pagination ant-table-pagination-center"
                            unselectable="unselectable"
                          >
                            <li
                              aria-disabled="true"
                              class="ant-pagination-prev ant-pagination-disabled"
                              title="Previous Page"
                            >
                              <button
                                class="ant-pagination-item-link"
                                disabled=""
                                tabindex="-1"
                                type="button"
                              >
                                <span
                                  aria-label="left"
                                  class="anticon anticon-left"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="left"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </li>
                            <li
                              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                              tabindex="0"
                              title="1"
                            >
                              <a
                                rel="nofollow"
                              >
                                1
                              </a>
                            </li>
                            <li
                              aria-disabled="true"
                              class="ant-pagination-next ant-pagination-disabled"
                              title="Next Page"
                            >
                              <button
                                class="ant-pagination-item-link"
                                disabled=""
                                tabindex="-1"
                                type="button"
                              >
                                <span
                                  aria-label="right"
                                  class="anticon anticon-right"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="right"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </li>
                          </ul>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-acls"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-acls"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchOverviewTab should navigate to ports tab correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-row Grid__GridRow-sc-5irhjd-2"
    style="margin: -10px -10px -10px -10px;"
  >
    <div
      class="ant-col ant-col-24 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 148px;"
      >
        <div
          class="styledComponents__Wrapper-sc-1352uh8-0 ilNUvb"
        >
          <div
            class="styledComponents__FallbackWrapper-sc-1352uh8-1 doEIjj"
          >
            <span
              aria-label="loader"
              role="img"
            >
              <div
                aria-busy="true"
                aria-live="polite"
                class="ant-spin ant-spin-lg ant-spin-spinning"
              >
                <span
                  class="ant-spin-dot ant-spin-dot-spin"
                >
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                </span>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card styledComponents__Tabs-sc-1afcsfc-0 jHmORd"
    style="margin-top: 25px;"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform: translate(0px, 0px);"
        >
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-panel"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-panel"
              role="tab"
              tabindex="0"
            >
              Panel
            </div>
          </div>
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
          >
            <div
              aria-controls="rc-tabs-test-panel-ports"
              aria-selected="true"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-ports"
              role="tab"
              tabindex="0"
            >
              Ports
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-routeInterfaces"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-routeInterfaces"
              role="tab"
              tabindex="0"
            >
              Route Interfaces
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-vlans"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-vlans"
              role="tab"
              tabindex="0"
            >
              VLANs
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-acls"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-acls"
              role="tab"
              tabindex="0"
            >
              ACLs
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="rc-tabs-test-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="rc-tabs-test-more"
          style="visibility: hidden; order: 1;"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-panel"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-panel"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-ports"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          id="rc-tabs-test-panel-ports"
          role="tabpanel"
          tabindex="0"
        >
          <div
            data-testid="rc-SwitchPortTable"
            title="SwitchPortTable"
          />
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-routeInterfaces"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-routeInterfaces"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-vlans"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-vlans"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-acls"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-acls"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
